--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Случайный текст</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Случайная строка</title>
 </head>
 <body>
-  <script>
-    // Получаем случайную строку из Google Sheets
-    fetch("https://script.google.com/macros/s/AKfycbwcbSvw4iNwL1VPCOIAAU-vHJjAQ3rMarfTdkZmbsD7PRWNbY9lNND34xq6ZkcDoAXi/exec")
-      .then(response => response.text())
-      .then(text => {
-        // Отображаем только строку без всего остального
-        document.body.textContent = text;
-      })
-      .catch(err => {
-        console.error('Ошибка загрузки:', err);
-        document.body.textContent = "Ошибка загрузки данных.";
-      });
-  </script>
+    <div id="random-text">Загрузка...</div>
+
+    <script>
+        // Функция для загрузки данных из JSON
+        fetch('https://campoot.github.io/random-text-site/data.json')
+            .then(response => response.json())
+            .then(data => {
+                // Выбираем случайную строку
+                const randomIndex = Math.floor(Math.random() * data.data.length);
+                const randomText = data.data[randomIndex];
+                
+                // Отображаем строку на странице
+                document.getElementById('random-text').innerText = randomText;
+            })
+            .catch(error => {
+                console.error('Ошибка загрузки данных:', error);
+                document.getElementById('random-text').innerText = 'Ошибка загрузки данных';
+            });
+    </script>
 </body>
 </html>
