--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         // URL для получения данных из Google Apps Script
-        const scriptUrl = "https://script.google.com/macros/s/AKfycbxRKSb1jmq-lKgt5d3euPxqmosTPKIvylKxGep9DBqup-wMbLCW025eHrh_O9sBex-k/exec; // замените на свой ID
+        const scriptUrl = "https://script.google.com/macros/s/AKfycbxRKSb1jmq-lKgt5d3euPxqmosTPKIvylKxGep9DBqup-wMbLCW025eHrh_O9sBex-k/exec"; // Замените на свой актуальный URL
 
         // Функция для получения случайной строки из JSON
         function getRandomText() {
