--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Случайная строка из таблицы</title>
+    <title>Случайная строка</title>
 </head>
 <body>
-    <h1>Случайная строка из таблицы:</h1>
+    <h1>Случайная строка:</h1>
     <div id="random-text">Загрузка...</div>
 
     <script>
-        // URL для получения данных из Google Apps Script
-        const scriptUrl = "https://script.google.com/macros/s/AKfycbxRKSb1jmq-lKgt5d3euPxqmosTPKIvylKxGep9DBqup-wMbLCW025eHrh_O9sBex-k/exec"; // Замените на свой актуальный URL
+        // URL для получения случайной строки из Google Apps Script
+        const scriptUrl = "https://script.google.com/macros/s/AKfycbzUvOR_Tz5gEYSOFokw6KdEkEfROThut__kzrWMX8aDTbTezK6OGXYq-3nS8CYi8uDw/exec";  // замените на свой ID
 
-        // Функция для получения случайной строки из JSON
+        // Функция для получения случайной строки с Google Apps Script
         function getRandomText() {
             fetch(scriptUrl)
                 .then(response => response.json())
                 .then(data => {
-                    // Получаем случайную строку из данных
-                    const randomIndex = Math.floor(Math.random() * data.data.length);
-                    document.getElementById("random-text").innerText = data.data[randomIndex];
+                    document.getElementById("random-text").innerText = data.data[0];  // Показать строку
                 })
                 .catch(error => {
                     console.error('Ошибка:', error);
-                    document.getElementById("random-text").innerText = "Ошибка загрузки данных.";
+                    document.getElementById("random-text").innerText = "Ошибка загрузки";
                 });
         }
 
